# public/docs/openapi.json
@@ -732,6 +732,33 @@
                 ]
             }
         },
+        "/hello": {
+            "get": {
+                "summary": "Simple ping",
+                "operationId": "GET::/hello::MyRest\\Rest\\HelloRest::getPing",
+                "responses": {
+                    "200": {
+                        "description": "The object",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "required": [
+                                        "result"
+                                    ],
+                                    "properties": {
+                                        "result": {
+                                            "type": "string",
+                                            "format": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "tags": [
